--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1",
-        "styled-components": "^5.1.0",
         "typescript": "^3.8.3"
     },
     "scripts": {
+        "lint:css": "stylelint './src/**/*.js'",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -43,6 +43,10 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.3",
-        "prettier": "^2.0.5"
+        "prettier": "^2.0.5",
+        "stylelint": "^13.3.3",
+        "stylelint-config-standard": "^20.0.0",
+        "stylelint-config-styled-components": "^0.1.1",
+        "stylelint-processor-styled-components": "^1.10.0"
     }
 }
