--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.7",
         "@types/styled-components": "^5.1.0",
+        "lodash": "^4.17.15",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1",
