--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         ]
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.155",
         "@typescript-eslint/eslint-plugin": "^2.31.0",
         "@typescript-eslint/parser": "^2.31.0",
         "babel-plugin-styled-components": "^1.10.7",
