--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "http://thereseringpersen.github.io/forms",
     "name": "forms",
     "version": "0.1.0",
     "private": true,
@@ -23,7 +24,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -48,6 +51,7 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.3",
+        "gh-pages": "^3.1.0",
         "prettier": "^2.0.5",
         "stylelint": "^13.3.3",
         "stylelint-config-standard": "^20.0.0",
