--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     },
     "scripts": {
         "lintstyle": "stylelint './src/**/*.tsx' && stylelint './src/**/*.ts'",
-        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
+        "predeploy": "yarn build",
         "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
