change filestructure and apply media query for mobile

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "scripts": {
         "lintstyle": "stylelint './src/**/*.tsx' && stylelint './src/**/*.ts'",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
